lexer.y
%{
#include <stdio.h>
extern FILE* yyin;
extern int currLine;
extern int currPos;
extern char* lineptr;
void yyerror(const char *msg);

%}

%start start
%token DIGIT INT INDEX THEN STRING EQUAL NOTEQUIVALENT TRUE FALSE MULTIPLY ADD SUBTRACT DIVISION LESSEROREQUAL EQUIVALENT GREATEROREQUAL LESSTHAN GREATERTHAN WHILE DO IF ELSE FUNCTION LEFT_PREN RIGHT_PREN LEFT_BRACKET RIGHT_BRACKET LEFT_CURR_BRACKET RIGHT_CURR_BRACKET RETURN END COMMA READ WRITE STRINGLITERAL INVALIDVAR VARIABLE

%%
start: /*epsilon*/ 
        | function void 

void: /*epsilon*/ 
	| function void 

function: FUNCTION functiondec statements END 

functiondec: VARIABLE LEFT_PREN declarationargs RIGHT_PREN 

functioncall: VARIABLE LEFT_PREN inputargs RIGHT_PREN 

elses: /*epsilon*/ 
	| ELSE statements 

statements: /*epsilon*/ 
	| rule s2 

s2: /*epsilon*/ 
	| rule s2 

rule: IF conditional statements elses END 
        | WHILE conditional statements END 
	| statement 

statement: INT VARIABLE  
	| VARIABLE EQUAL exp 
        | VARIABLE EQUAL STRINGLITERAL 
	| INT VARIABLE EQUAL exp  
	| WRITE DIGIT 
        | WRITE VARIABLE 
	| WRITE STRINGLITERAL 
        | STRING VARIABLE EQUAL STRINGLITERAL 
        | RETURN retval 
	| functioncall 
        | functioncall addop functioncall 
        | functioncall mulop functioncall 
	| VARIABLE EQUAL functioncall 
	| INT VARIABLE EQUAL functioncall 

conditional: exp condition exp  
	| exp condition boolean 
        | STRINGLITERAL condition STRINGLITERAL  
	
boolean: TRUE 
	| FALSE 

condition: LESSEROREQUAL
        | GREATEROREQUAL
        | LESSTHAN      
        | GREATERTHAN   
        | EQUIVALENT    
        | NOTEQUIVALENT 

retval: statement 
	| exp  
	| conditional 
	| boolean 

type: /*epsilon*/ 
	| INT 
	| STRING 

input: exp 

inputargs: /*epsilon*/ 
	| input inputargs2 

inputargs2: /*epsilon*/ 
	| COMMA input inputargs2 

declarationargs:  /*epsilon*/ 
	| type VARIABLE declarationargs2 

declarationargs2: /*epsilon*/ 
	| COMMA type VARIABLE declarationargs2 

exp: exp addop term 
        | term 

addop: ADD 
        | SUBTRACT 

term: term mulop factor 
        | factor 

mulop: MULTIPLY 
        | DIVISION 

factor: LEFT_PREN exp RIGHT_PREN 
        | DIGIT  	
	| VARIABLE 
%%

int main(int argc, char ** argv) {
	if (argc >= 2) {
		yyin = fopen(argv[1], "r");
		if (yyin == NULL) {
			yyin = stdin;
		}
	}
	else {
		yyin = stdin;
	}
	yyparse();
	return 1;
}
void yyerror(const char *msg) {
    //fprintf(stderr, "%s\n", msg);
    printf("Error: On line %d, column %d: %s \n", currLine, currPos, msg);
}
